@@ -1,3 +1,7 @@
+2004-03-14  Dom Lachowicz <cinamod@.hotmail.com>
+
+	* test-performance.c: Make this a useful performance tester
+	
 2004-03-12  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-shapes.c: Allow for base64 embedded image data
